nvrules2kw/templates/annotations_containsAny.yaml
apiVersion: policies.kubewarden.io/v1
kind: ClusterAdmissionPolicy
metadata:
  annotations:
    io.kubewarden.policy.category: Resource validation
    io.kubewarden.policy.severity: low
  name: annotations-contains-any
spec:
  module: registry://ghcr.io/kubewarden/policies/cel-policy:latest
  settings:
    variables:
    - name: userConfig
      expression: '{"bad1": "^value1.*$", "bad2": "^value2$"}'
    - name: dataset1a
      expression: 'has(object.metadata.annotations) ? object.metadata.annotations : []'
    - name: dataset1b
      expression: 'has(object.spec.template.metadata.annotations) ? object.spec.template.metadata.annotations : []'
    - name: dataset3
      expression: 'has(object.spec.jobTemplate.metadata.annotations) ? object.spec.jobTemplate.metadata.annotations: []'
    - name: isType1
      expression: 'object.kind in ["Pod"] ? true: false'
    - name: isType2
      expression: 'object.kind in ["Deployment","ReplicaSet","DaemonSet","StatefulSet","Job"] ? true: false'
    - name: isType3
      expression: 'object.kind in ["CronJob"] ? true: false'
    validations:
      - expression: '
          !variables.isType1 ||
          (
            !variables.dataset1a.exists(key, key in variables.userConfig && variables.dataset1a[key].matches(variables.userConfig[key]))
          )
          '
        message: 'operator: contains_any, annotations cannot use any userConfig key/value'
      - expression: '
          !variables.isType2 ||
          (
            (!variables.dataset1a.exists(key, key in variables.userConfig && variables.dataset1a[key].matches(variables.userConfig[key]))) 
            &&
            (!variables.dataset1b.exists(key, key in variables.userConfig && variables.dataset1b[key].matches(variables.userConfig[key])))
          )
          '
        message: 'operator: contains_any, annotations cannot use any userConfig key/value'
      - expression: '
        !variables.isType3 ||
        (
          (!variables.dataset1a.exists(key, key in variables.userConfig && variables.dataset1a[key].matches(variables.userConfig[key]))) 
          &&
          (!variables.dataset3.exists(key, key in variables.userConfig && variables.dataset3[key].matches(variables.userConfig[key])))
        )
        '
        message: 'operator: contains_any, annotations cannot use any userConfig key/value'
  rules:
    - apiGroups: ["apps"]
      apiVersions: ["v1"]
      operations: ["CREATE", "UPDATE"]
      resources: ["deployments"]
    - apiGroups: ["batch"]
      apiVersions: ["v1"]
      operations: ["CREATE", "UPDATE"]
      resources: ["cronjobs"]
    - apiGroups: [""]
      apiVersions: ["v1"]
      operations: ["CREATE", "UPDATE"]
      resources: ["pods"]
  mutating: false
  backgroundAudit: false
