nvrules2kw/templates/imageRegistry_containsAny.yaml
apiVersion: policies.kubewarden.io/v1
kind: ClusterAdmissionPolicy
metadata:
  annotations:
    io.kubewarden.policy.category: Resource validation
    io.kubewarden.policy.severity: low
  name: image-registry-contains-any
spec:
  module: registry://ghcr.io/kubewarden/policies/trusted-repos:v0.2.0
  settings:
    registries:
      reject:
      - TODO
