nvrules2kw/templates/labels_containsAll.yaml
apiVersion: policies.kubewarden.io/v1
kind: ClusterAdmissionPolicy
metadata:
  annotations:
    io.kubewarden.policy.category: Resource validation
    io.kubewarden.policy.severity: low
  name: labels-contains-all
spec:
  module: registry://ghcr.io/kubewarden/policies/cel-policy:latest
  settings:
    variables:
    - name: userConfig
      expression: '{"bad1": "^value1$", "bad2": "^value2$"}'
    - name: dataset1a
      expression: 'has(object.metadata.labels) ? object.metadata.labels : []'
    - name: dataset1b
      expression: 'has(object.spec.template.metadata.labels) ? object.spec.template.metadata.labels : []'
    - name: dataset3
      expression: 'has(object.spec.jobTemplate.metadata.labels) ? object.spec.jobTemplate.metadata.labels: []'
    - name: isType1
      expression: 'object.kind in ["Pod"] ? true: false'
    - name: isType2
      expression: 'object.kind in ["Deployment","ReplicaSet","DaemonSet","StatefulSet","Job"] ? true: false'
    - name: isType3
      expression: 'object.kind in ["CronJob"] ? true: false'
    validations:
      - expression: '
          !variables.isType1 ||
          (
            !variables.userConfig.all(key, key in variables.dataset1a && variables.dataset1a[key].matches(variables.userConfig[key]))
          )
          '
        message: 'operator: contains_all, labels cannot use all userConfig key/value'
      - expression: '
          !variables.isType2 ||
          (
            (!variables.userConfig.all(key, key in variables.dataset1a && variables.dataset1a[key].matches(variables.userConfig[key])))
            &&
            (!variables.userConfig.all(key, key in variables.dataset1b && variables.dataset1b[key].matches(variables.userConfig[key])))
          )
          '
        message: 'operator: contains_all, labels cannot use all userConfig key/value'
      - expression: '
          !variables.isType3 ||
          (
            (!variables.userConfig.all(key, key in variables.dataset1a && variables.dataset1a[key].matches(variables.userConfig[key])))
            &&
            (!variables.userConfig.all(key, key in variables.dataset3 && variables.dataset3[key].matches(variables.userConfig[key])))
          )
          '
        message: 'operator: contains_all, labels cannot use all userConfig key/value'
  rules:
    - apiGroups: ["apps"]
      apiVersions: ["v1"]
      operations: ["CREATE", "UPDATE"]
      resources: ["deployments"]
    - apiGroups: ["batch"]
      apiVersions: ["v1"]
      operations: ["CREATE", "UPDATE"]
      resources: ["cronjobs"]
    - apiGroups: [""]
      apiVersions: ["v1"]
      operations: ["CREATE", "UPDATE"]
      resources: ["pods"]
  mutating: false
  backgroundAudit: false
