nvrules2kw/templates/namespace_containsAny.yaml
apiVersion: policies.kubewarden.io/v1
kind: ClusterAdmissionPolicy
metadata:
  annotations:
    io.kubewarden.policy.category: Resource validation
    io.kubewarden.policy.severity: low
  name: namespace-contains-any
spec:
  module: registry://ghcr.io/kubewarden/policies/cel-policy:latest
  settings:
    variables:
      - name: userConfig
        expression: '["^test$", "^ns1$","^ns2$"]'
      - name: hasNamespace
        expression: 'has(request.namespace)'
    validations:
      - expression: '!variables.hasNamespace || 
                !variables.userConfig.exists(pattern, request.namespace.matches(pattern))'
        message: 'The namespace in the request is not allowed.'
  rules:
    - apiGroups: ["apps"]
      apiVersions: ["v1"]
      operations: ["CREATE", "UPDATE"]
      resources: ["deployments"]
    - apiGroups: ["batch"]
      apiVersions: ["v1"]
      operations: ["CREATE", "UPDATE"]
      resources: ["cronjobs"]
    - apiGroups: [""]
      apiVersions: ["v1"]
      operations: ["CREATE", "UPDATE"]
      resources: ["pods"]
  mutating: false
  backgroundAudit: false
