nvrules2kw/templates/namespace_notContainsAny.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: namespace-not-contains-any
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods"]
    - apiGroups:   ["apps"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["deployments","replicasets","daemonsets","statefulsets"]
    - apiGroups:   ["batch"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["jobs","cronjobs"]
  variables:
  - name: userConfig
    expression: '["^test$", "^ns1$","^ns2$"]'
  - name: hasNamespace
    expression: 'has(request.namespace)'
  validations:
    - expression: '!variables.hasNamespace || 
              variables.userConfig.exists(pattern, request.namespace.matches(pattern))'
      message: 'The namespace in the request must be in the approved list.'
